--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,7 @@
 body {
  background-color: rgb(255, 255, 255);  
- min-width: 200px;
+ min-width: 400px;
+ min-height: 600px;
  }
 
 #runevent {
@@ -18,12 +19,21 @@ body {
                 0 0 0 4px black;
   }
 
-  #wplogo {
+  .infocontainer, .footer, .domaincontainer, #wplogo {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+    text-align: center;
   }
+
+.field { 
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
 
   a:link, a:visited {
     color: (internal value);
